Bug 409587 - "input[type="file"] cropped when narrow width specified" [p=kinetik@flim.org (Matthew Gregan) r+sr=roc a1.9=beltzner]